[studio] fix question alignment

--- a/studio/plugins/quiz-match/components/styles/Results.css
+++ b/studio/plugins/quiz-match/components/styles/Results.css
@@ -17,6 +17,7 @@
 .heading {
   margin: 0;
   font-size: 1.8em;
+  text-align: center;
 }
 
 .label {
